--- a/deeptsf_backend/docker-compose.yml
+++ b/deeptsf_backend/docker-compose.yml
@@ -1,31 +1,190 @@
-version: '3.3'
-# to run this you need to create a .env file with the contents of .env_keycloak and fill the missing variables.
+version: '3.4'
+# to run this you need to create a .env file with the contents of .env.example
 services:
 
-  backend:
-    container_name: DeepTSF-backend
-    hostname: DeepTSF-backend
-    #image: pelekhs/load-forecasting-pipeline:0.1
-    build:
-      context: .
-      dockerfile: ./Dockerfile
+  s3:
+    image: minio/minio:RELEASE.2024-03-30T09-41-56Z
+    # image: minio/minio:RELEASE.2020-12-18T03-27-42Z
+    container_name: s3
     restart: always
-    # ports:
-    #  - '8081:8081'
+    hostname: s3
+    volumes:
+      - artifact-store:/data
+    ports:
+      - 9000:9000
+      - 9001:9001
+    networks:
+      - load-forecasting-net
+    command:
+        server /data --console-address ":9001"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 10s
+      timeout: 10s
+      retries: 3
+    env_file:
+      - .env
+      # Uses following .env parameters:
+      # MINIO_ROOT_USER
+      # MINIO_ROOT_PASSWORD
+
+
+  create_bucket:
+    # image: minio/mc:RELEASE.2019-07-17T22-13-42Z
+    image: minio/minio:RELEASE.2024-03-30T09-41-56Z
+    depends_on:
+      - s3    
+    networks:
+       - load-forecasting-net
+    entrypoint: >
+      /bin/sh -c '
+      sleep 5;
+      /usr/bin/mc config host add s3 http://s3:9000 ${MINIO_ROOT_USER} ${MINIO_ROOT_PASSWORD} --api S3v4;
+      [[ ! -z "`/usr/bin/mc ls s3 | grep challenge`" ]] || /usr/bin/mc mb s3/${BUCKET_NAME};
+      /usr/bin/mc policy download s3/${BUCKET_NAME};
+      /usr/bin/mc policy set public s3/${BUCKET_NAME};
+      exit 0;
+      '
+    env_file:
+      - .env
+      # Uses following .env parameters:
+      # MINIO_ROOT_USER
+      # MINIO_ROOT_PASSWORD
+
+
+  pgdb:
+    container_name: pgdb
+    hostname: pgdb
+    restart: always
+    image: inergy2020iccs/pgdb:16.2
+    volumes:
+        - database:/var/lib/postgresql/data
+    ports:
+      - 5432:5432
     expose:
-      - 8081
-    stdin_open: true
-    # deploy: # use this configuration for GPU usage (if GPU available)
+      - '5432'
+    environment:
+      PGDATA: /var/lib/postgresql/data/pgdata
+    networks:
+      - load-forecasting-net
+    env_file:
+      - .env
+      # Uses following .env parameters:
+      # POSTGRES_USER
+      # POSTGRES_PASSWORD
+      # POSTGRES_DATABASE
+
+
+  mlflow_server:
+    container_name: mlflow_server
+    hostname: mlflow_server
+    restart: always
+    image: inergy2020iccs/mlflow_server:2.11.3
+    ports:
+      - 5000:5000
+    expose:
+      - 5000
+    depends_on: 
+      - s3
+      - pgdb
+    networks:
+      - load-forecasting-net
+    command: bash -c 
+      "mlflow server --backend-store-uri postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@pgdb:5432/${POSTGRES_DATABASE} --host 0.0.0.0 --default-artifact-root s3://${BUCKET_NAME}/"
+    env_file:
+      - .env
+      # Uses following .env parameters:
+      # POSTGRES_PASSWORD
+      # POSTGRES_USER
+      # POSTGRES_DATABASE
+      # MLFLOW_S3_ENDPOINT_URL
+      # AWS_ACCESS_KEY_ID
+      # AWS_SECRET_ACCESS_KEY
+
+
+  backend:
+    hostname: deeptsf_backend
+    container_name: deeptsf_backend
+    # image: inergy2020iccs/deeptsf_backend:1.0.2  # only for releases
+    build: .
+    restart: always
+    ports:
+      - '8080:8080'
+    expose:
+      - '8080'
+    # volumes:
+      # - .:/app/. #debugging only
+    stdin_open: 
+      true
+    env_file:
+      - .env
+    # Uses all .env parameters
+    # deploy: # activate this if you want gpu usage
     #   resources:
     #     reservations:
     #       devices:
     #         - driver: nvidia
     #           capabilities: [gpu]
-    # env_file:
-    #   - .env
     networks:
-       - keycloak_net
+       - load-forecasting-net
 
-networks:
-  keycloak_net:
-    external: true
+  dagster:
+    container_name: deeptsf_dagster
+    hostname: deeptsf_dagster
+    # image: inergy2020iccs/deeptsf_dagster:1.0.1 # only for releases
+    build:
+      context: .
+      dockerfile: ./dagster-deeptsf/config/Dockerfile
+    # deploy: # activate this if you want gpu usage
+    #   resources:
+    #     reservations:
+    #       devices:
+    #         - driver: nvidia
+    #           capabilities: [gpu]
+    expose:
+      - 8006
+    ports:
+      - 8006:8006
+    # volumes:
+    #   - dagster-logs:/app/dagster-deeptsf
+    #   - ./uc2/user_datasets:/app/dagster-deeptsf/user_datasets
+      # - ./dagster-deeptsf/dagster_deeptsf:/app/dagster-deeptsf/dagster_deeptsf  #debugging only
+    networks:
+      - load-forecasting-net
+    env_file:
+      - .env
+      # Uses following .env parameters:
+      # MLFLOW_TRACKING_URI
+      # MLFLOW_S3_ENDPOINT_URL
+      # AWS_ACCESS_KEY_ID
+      # AWS_SECRET_ACCESS_KEY
+
+  frontend:
+    container_name: deeptsf_dashboard
+    hostname: deeptsf_dashboard
+    image: inergy2020iccs/deeptsf_dashboard:1.0.2
+    # build: https://github.com/I-NERGY/deeptsf-dashboard.git
+    restart: always
+    expose:
+      - 3000
+    ports:
+      - 3000:3000
+    stdin_open: true
+    # environment:
+    ## These environment variable cannot be set from within here. (React issues)
+    ## Instead they should have been included as .env in the front end repo / image.
+    #   DAGSTER_ENDPOINT_URL: ${DAGSTER_ENDPOINT_URL}
+    #   REACT_APP_AUTH: "false"
+    #   REACT_APP_MLFLOW: ${MLFLOW_TRACKING_URI}
+    #   CHOKIDAR_USEPOLLING: "true"
+    #   REACT_APP_NAME: Load_Forecasting_Dashboard
+    networks:
+      - load-forecasting-net
+
+volumes:
+  database:
+  artifact-store:
+  # dagster-logs:
+
+networks: 
+  load-forecasting-net:
