--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,19 @@
 version: '3.4'
 # to run this you need to create a .env file with the contents of .env.example
 services:
+  # base:
+  #   container_name: deeptsf_base
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile.base
+  #   image: conda-base:latest
+  #   # We don't need to run anything for the base image. Just build it.
+  #   entrypoint: /bin/true
 
   s3:
-    image: minio/minio:RELEASE.2024-03-30T09-41-56Z
+    # image: minio/minio:RELEASE.2024-03-30T09-41-56Z
     # image: minio/minio:RELEASE.2020-12-18T03-27-42Z
+    image: minio/minio:RELEASE.2025-02-18T16-25-55Z
     container_name: s3
     restart: always
     hostname: s3
@@ -31,7 +40,8 @@ services:
 
   create_bucket:
     # image: minio/mc:RELEASE.2019-07-17T22-13-42Z
-    image: minio/minio:RELEASE.2024-03-30T09-41-56Z
+    # image: minio/minio:RELEASE.2024-03-30T09-41-56Z
+    image: minio/minio:RELEASE.2025-02-18T16-25-55Z
     depends_on:
       - s3    
     networks:
@@ -107,7 +117,7 @@ services:
     container_name: deeptsf_backend
     # image: inergy2020iccs/deeptsf_backend:1.0.2  # only for releases
     build: .    
-    restart: always
+    # restart: always
     ports:
       - '8080:8080'
     expose:
@@ -122,6 +132,7 @@ services:
     #   - ./shared:/shared
     depends_on:
       - redis
+      # - base
     # Uses all .env parameters
     # deploy: # activate this if you want gpu usage
     #   resources:
@@ -138,8 +149,8 @@ services:
       context: .
     env_file:
       - .env
-    depends_on:
-      - redis
+    # depends_on:
+      # - base
     # volumes:
     #   - ./shared:/shared:ro
     networks:
@@ -167,6 +178,8 @@ services:
       - 8006
     ports:
       - 8006:8006
+    # depends_on:
+      # - base
     # volumes:
     #   - dagster-deeptsf-logs:/app/dagster_deeptsf
     #   - ./uc2/user_datasets:/app/dagster_deeptsf/user_datasets
@@ -183,6 +196,8 @@ services:
 
   postgres:
     image: inergy2020iccs/pgdb:16.2
+    volumes:
+        - database2:/var/lib/postgresql/data
     restart: always
     container_name: postgres
     hostname: postgres
@@ -220,8 +235,9 @@ services:
 
 volumes:
   database:
+  database2:
   artifact-store:
-  dagster-deeptsf-logs:
+  # dagster-deeptsf-logs:
 
 networks: 
   load-forecasting-net:
