--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ stages:
 # Build the Docker image for the React app and push it to Harbor
 build-app:
   stage: build-app
-  image: harbor.deployai.eu/cvm-public/ci-tools
+  image: harbor.aiodp.ai/cvm-public/ci-tools
   services:
     - docker:dind
   variables:
@@ -36,7 +36,7 @@ build-app:
 # Deploy the app to dev using Helm and Rancher
 deploy-dev:
   stage: deploy-dev
-  image: harbor.deployai.eu/cvm-public/ci-tools
+  image: harbor.aiodp.ai/cvm-public/ci-tools
   dependencies:
     - build-app
   before_script:
@@ -57,7 +57,7 @@ deploy-dev:
 # Deploy the app to stage using Helm and Rancher
 deploy-stage:
   stage: deploy-stage
-  image: harbor.deployai.eu/cvm-public/ci-tools
+  image: harbor.aiodp.ai/cvm-public/ci-tools
   dependencies:
     - build-app
   before_script:
@@ -77,7 +77,7 @@ deploy-stage:
   # Deploy the app to prod using Helm and Rancher
 deploy-prod:
   stage: deploy-prod
-  image: harbor.deployai.eu/cvm-public/ci-tools
+  image: harbor.aiodp.ai/cvm-public/ci-tools
   dependencies:
     - build-app
   before_script:
@@ -88,7 +88,7 @@ deploy-prod:
     - echo "Deploying to Rancher using Helm..."
     - helm upgrade --install deeptsf-backend ./helm-chart -f helm-chart/values.yaml --namespace iccs --set storageClassName=longhorn --set registry.password=${HARBOR_ROBOT_PASSWORD} --set registry.username=${HARBOR_ROBOT_USER} --set registry.registry=${HARBOR_HOST} --set env.host=.aiodp.ai --set env.marketplace=platform.aiodp.ai --set env.AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID} --set env.AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY} --set env.MINIO_CLIENT_URL=${MINIO_CLIENT_URL} --set env.MINIO_SSL=${MINIO_SSL} --set env.MLFLOW_TRACKING_URI=${MLFLOW_TRACKING_URI} --set env.MLFLOW_S3_ENDPOINT_URL=${MLFLOW_S3_ENDPOINT_URL} --set env.MINIO_ACCESS_KEY=${MINIO_ACCESS_KEY} --set env.MINIO_SECRET_KEY=${MINIO_SECRET_KEY} --set env.USE_KEYCLOAK=${USE_KEYCLOAK} --set env.KEYCLOAK_ID=${KEYCLOAK_ID} --set env.KEYCLOAK_SECRET=${KEYCLOAK_SECRET} --set env.TOKEN_ISSUER_URL=${TOKEN_ISSUER_URL} --set commitHash=${CI_COMMIT_SHA}
   only:
-    - master
+    - mastermaster
   tags:
     - shared
   environment:
