--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,10 +20,14 @@ build-app:
   before_script:
     - docker info
   script:
+    - set -x
     - echo "Logging into Harbor using Robot Account..."
     - echo ${HARBOR_ROBOT_PASSWORD} | docker login ${HARBOR_HOST} -u ${HARBOR_ROBOT_USER} --password-stdin
+    - set -x
 
-    - echo ${HARBOR_HOST} ${HARBOR_ROBOT_USER} 
+    - set -x
+    - echo ${HARBOR_HOST} ${HARBOR_ROBOT_USER}
+    - set -x
     - echo "Building Docker image for deeptsf backend..."
     - docker build -f deeptsf_backend/Dockerfile_keycloak -t ${HARBOR_IMAGE_BACKEND} ./deeptsf_backend
     - echo "Pushing Docker image to Harbor..."
