--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,9 @@
 stages:
   - build-app
+  - build-dagster
   - deploy-dev
   - deploy-stage
   - deploy-prod
-# Build the Docker image for the React app and push it to Harbor
 
 variables:
   HARBOR_IMAGE_BACKEND: "${HARBOR_HOST}/iccs/deeptsf-backend:latest"
@@ -20,22 +20,33 @@ build-app:
   before_script:
     - docker info
   script:
-    - set -x
-    - echo "Logging into Harbor using Robot Account..."
-    - echo ${HARBOR_ROBOT_PASSWORD} | docker login ${HARBOR_HOST} -u ${HARBOR_ROBOT_USER} --password-stdin
-    - set -x
-
-    - set -x
     - echo ${HARBOR_HOST} ${HARBOR_ROBOT_USER}
-    - set -x
     - echo "Building Docker image for deeptsf backend..."
     - docker build -f deeptsf_backend/Dockerfile_keycloak -t ${HARBOR_IMAGE_BACKEND} ./deeptsf_backend
+    - echo "Logging into Harbor using Robot Account..."
+    - echo ${HARBOR_ROBOT_PASSWORD} | docker login ${HARBOR_HOST} -u ${HARBOR_ROBOT_USER} --password-stdin
     - echo "Pushing Docker image to Harbor..."
     - docker push ${HARBOR_IMAGE_BACKEND}
 
+  only:
+    - master
+  tags:
+    - shared
 
+build-dagster:
+  stage: build-dagster
+  image: harbor.deployai.eu/cvm-public/ci-tools
+  services:
+    - docker:dind
+  variables:
+    DOCKER_DRIVER: overlay2
+  before_script:
+    - docker info
+  script:
     - echo "Building Docker image for dagster..."
     - docker build -f deeptsf_backend/dagster-deeptsf/config/Dockerfile -t ${HARBOR_IMAGE_DAGSTER} ./deeptsf_backend
+    - echo "Logging into Harbor using Robot Account..."
+    - echo ${HARBOR_ROBOT_PASSWORD} | docker login ${HARBOR_HOST} -u ${HARBOR_ROBOT_USER} --password-stdin
     - echo "Pushing Docker image to Harbor..."
     - docker push ${HARBOR_IMAGE_DAGSTER}
 
@@ -50,6 +61,7 @@ deploy-dev:
   image: harbor.deployai.eu/cvm-public/ci-tools
   dependencies:
     - build-app
+    - build-dagster
   before_script:
     - echo "Secure the KUBECONFIG file"
     - chmod 600 ${KUBECONFIG}
@@ -71,6 +83,7 @@ deploy-stage:
   image: harbor.deployai.eu/cvm-public/ci-tools
   dependencies:
     - build-app
+    - build-dagster
   before_script:
     - echo "Secure the KUBECONFIG file"
     - chmod 600 ${KUBECONFIG_STAGE}
@@ -91,6 +104,7 @@ deploy-prod:
   image: harbor.deployai.eu/cvm-public/ci-tools
   dependencies:
     - build-app
+    - build-dagster
   before_script:
     - echo "Secure the KUBECONFIG file"
     - chmod 600 ${KUBECONFIG_PROD}
