--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -30,7 +30,7 @@ env:
   MLFLOW_S3_ENDPOINT_URL: ""
   MINIO_ACCESS_KEY: ""
   MINIO_SECRET_KEY: ""
-  USE_KEYCLOAK: ""
+  USE_AUTH: ""
   KEYCLOAK_ID: ""
   KEYCLOAK_SECRET: ""
   TOKEN_ISSUER_URL: ""
