--- a/deeptsf_backend/docker-compose.yml
+++ b/deeptsf_backend/docker-compose.yml
@@ -162,7 +162,7 @@ services:
   frontend:
     container_name: deeptsf_dashboard
     hostname: deeptsf_dashboard
-    image: inergy2020iccs/deeptsf_dashboard:1.0.2
+    image: deployaintua/deeptsf-dashboard:latest
     # build: https://github.com/I-NERGY/deeptsf-dashboard.git
     restart: always
     expose:
