Fix local version

--- a/deeptsf_backend/.env.example
+++ b/deeptsf_backend/.env.example
@@ -27,6 +27,8 @@ MLFLOW_S3_ENDPOINT_URL=http://s3:9000
 DAGSTER_ENDPOINT_URL=http://deeptsf_dagster:8006
 GIT_PYTHON_REFRESH=quiet
 
+DAGSTER_HOME=/app/dagster-deeptsf
+
 # For use without docker (CLI with conda)
 # MLFLOW_TRACKING_URI=http://localhost:5000
 # MLFLOW_S3_ENDPOINT_URL=http://localhost:9000
@@ -43,4 +45,4 @@ GIT_PYTHON_REFRESH=quiet
 # DAGSTER_ENDPOINT_URL=http://deeptsf_dagster:8006
 
 # Security
-USE_KEYCLOAK=False
+USE_AUTH=False
