--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,9 @@ stages:
 variables:
   HARBOR_IMAGE_BACKEND: "${HARBOR_HOST}/iccs/deeptsf-backend:latest"
   HARBOR_IMAGE_DAGSTER: "${HARBOR_HOST}/iccs/deeptsf-dagster:latest"
+  HARBOR_IMAGE_WORKER: "${HARBOR_HOST}/iccs/deeptsf-worker:latest"
+  HARBOR_IMAGE_PGDB: "${HARBOR_HOST}/iccs/deeptsf-pgdb:latest"
+  HARBOR_IMAGE_REDIS: "${HARBOR_HOST}/iccs/deeptsf-redis:latest"
 
 
 build-app:
@@ -20,34 +23,40 @@ build-app:
   before_script:
     - docker info
   script:
+    ###BUILDING###
     - echo "Building Docker image for deeptsf backend..."
-    - docker build -f deeptsf_backend/Dockerfile_keycloak -t ${HARBOR_IMAGE_BACKEND} ./deeptsf_backend
+    - docker build --target backend -f deeptsf_backend/Dockerfile_keycloak -t ${HARBOR_IMAGE_BACKEND} ./deeptsf_backend
+
+    - echo "Building Docker image for dagster..."
+    - docker build --target backend -f deeptsf_backend/Dockerfile_keycloak -t ${HARBOR_IMAGE_DAGSTER} ./deeptsf_backend
+
+    - echo "Building Docker image for worker..."
+    - docker build --target celery-worker -f deeptsf_backend/Dockerfile_keycloak -t ${HARBOR_IMAGE_WORKER} ./deeptsf_backend
+
+    - echo "Building Docker image for pgdb..."
+    - docker pull inergy2020iccs/pgdb:16.2 -t ${HARBOR_IMAGE_PGDB}
+
+    - echo "Building Docker image for redis..."
+    - docker pull redis:7-alpine -t ${HARBOR_IMAGE_REDIS}
+
+    ###PUSHING###
     - echo "Logging into Harbor using Robot Account..."
     - echo ${HARBOR_ROBOT_PASSWORD} | docker login ${HARBOR_HOST} -u ${HARBOR_ROBOT_USER} --password-stdin
-    - echo "Pushing Docker image to Harbor..."
+
+    - echo "Pushing Backend Docker image to Harbor..."
     - docker push ${HARBOR_IMAGE_BACKEND}
 
-  only:
-    - master
-  tags:
-    - shared
-
-build-dagster:
-  stage: build-dagster
-  image: harbor.aiodp.ai/cvm-public/ci-tools 
-  services:
-    - docker:dind
-  variables:
-    DOCKER_DRIVER: overlay2
-  before_script:
-    - docker info
-  script:
-    - echo "Building Docker image for dagster..."
-    - docker build -f deeptsf_backend/dagster-deeptsf/config/Dockerfile -t ${HARBOR_IMAGE_DAGSTER} ./deeptsf_backend
-    - echo "Logging into Harbor using Robot Account..."
-    - echo ${HARBOR_ROBOT_PASSWORD} | docker login ${HARBOR_HOST} -u ${HARBOR_ROBOT_USER} --password-stdin
-    - echo "Pushing Docker image to Harbor..."
+    - echo "Pushing Dagster Docker image to Harbor..."
     - docker push ${HARBOR_IMAGE_DAGSTER}
+
+    - echo "Pushing worker Docker image to Harbor..."
+    - docker push ${HARBOR_IMAGE_WORKER}
+
+    - echo "Pushing pgdb Docker image to Harbor..."
+    - docker push ${HARBOR_IMAGE_PGDB}
+
+    - echo "Pushing redis Docker image to Harbor..."
+    - docker push ${HARBOR_IMAGE_REDIS}
 
   only:
     - master
@@ -112,7 +121,7 @@ deploy-prod:
     - echo "Deploying to Rancher using Helm..."
     - helm upgrade --install deeptsf-backend ./helm-chart -f helm-chart/values.yaml --namespace iccs --set storageClassName=longhorn --set registry.password=${HARBOR_ROBOT_PASSWORD} --set registry.username=${HARBOR_ROBOT_USER} --set registry.registry=${HARBOR_HOST} --set env.host=.aiodp.ai --set env.marketplace=platform.aiodp.ai --set env.AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID} --set env.AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY} --set env.MINIO_CLIENT_URL=${MINIO_CLIENT_URL} --set env.MINIO_SSL=${MINIO_SSL} --set env.MLFLOW_TRACKING_URI=${MLFLOW_TRACKING_URI} --set env.MLFLOW_S3_ENDPOINT_URL=${MLFLOW_S3_ENDPOINT_URL} --set env.MINIO_ACCESS_KEY=${MINIO_ACCESS_KEY} --set env.MINIO_SECRET_KEY=${MINIO_SECRET_KEY} --set env.USE_AUTH=${USE_AUTH} --set env.KEYCLOAK_ID=${KEYCLOAK_ID} --set env.KEYCLOAK_SECRET=${KEYCLOAK_SECRET} --set env.TOKEN_ISSUER_URL=${TOKEN_ISSUER_URL} --set commitHash=${CI_COMMIT_SHA}
   only:
-    - master
+    - mastermaster
   tags:
     - shared
   environment:
