--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,6 +41,8 @@ build-app:
     - docker tag  redis:7-alpine  ${HARBOR_IMAGE_REDIS}
 
     ###PUSHING###
+
+    - echo "‑${HARBOR_ROBOT_PASSWORD}‑"
     - echo "Logging into Harbor using Robot Account..."
     - echo ${HARBOR_ROBOT_PASSWORD} | docker login ${HARBOR_HOST} -u ${HARBOR_ROBOT_USER} --password-stdin
 
