--- a/helm-chart/templates/app-deploy-pgdb.yaml
+++ b/helm-chart/templates/app-deploy-pgdb.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: "{{ .Release.Name }}-deeptsf-pgdb"
+  name: {{ .Values.pgdb.service.name }}
   labels:
     release: {{ .Release.Name }}
 spec:
@@ -52,7 +52,7 @@ spec:
           value: {{ required "POSTGRES_PASSWORD environment variable is required" .Values.env.POSTGRES_PASSWORD | quote }}
         - name: PGDATA
           value: /var/lib/postgresql/data/pgdata
-          
+
         volumeMounts:
           - name: database
             mountPath: /var/lib/postgresql/data
